# rag-ollama

./: .gitignore  QWEN.md  README.md  TODO.md  benchmark_models.py  code_review.md  code_review2.md  config.yaml  example_document.txt  prepare_documents.py  pyproject.toml  rag_ollama_new.py  requirements.txt  simple_ollama_cli.py  test_rag_automated.py
.qwen/: PROJECT_SUMMARY.md
src/rag_ollama/: add_document.py  config.py  prepare_documents.py  rag.py
src/rag_ollama/processors/: base.py  docling.py  image.py  pdf.py
src/rag_ollama/utils/: exceptions.py  hash.py  logging.py
tests/: conftest.py  test_processing.py  test_processors.py  test_rag.py  test_rag_automated.py
